Replaced Collectors.toList with toList