@@ -11,7 +11,7 @@ public class MoneyService {
     public static Money total(Collection<? extends MoneySupplier> moneySuppliers) {
         Money total = null;
         if (moneySuppliers != null) {
-            List<Money> monies = moneySuppliers.stream().filter(i -> i != null && i.getAmount() != null).map(i -> i.getAmount()).collect(Collectors.toList());
+            List<Money> monies = moneySuppliers.stream().filter(i -> i != null && i.getAmount() != null).map(i -> i.getAmount()).toList();
             if (monies.size() > 0) {
                 total = Money.total(monies);
             }
